--- a/index.html
+++ b/index.html
@@ -393,11 +393,21 @@
                     <div class="add">
                         <div class="add__title">добавить к туру услуги:</div>
                         <div class="add__list">
-                            <div class="add__item"> <div class="add__btn">круиз</div> </div>
-                            <div class="add__item"> <div class="add__btn">отель</div> </div>
-                            <div class="add__item"> <div class="add__btn">перелёт</div> </div>
-                            <div class="add__item"> <div class="add__btn">трансфер</div> </div>
-                            <div class="add__item"> <div class="add__btn">экскурсии</div> </div>
+                            <div class="add__item"> <div class="add__btn"><svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.5C4.44772 0.5 4 0.947715 4 1.5V4.5L1 4.5C0.447715 4.5 0 4.94771 0 5.5C0 6.05228 0.447715 6.5 1 6.5H4V9.5C4 10.0523 4.44772 10.5 5 10.5C5.55228 10.5 6 10.0523 6 9.5V6.5H9C9.55228 6.5 10 6.05228 10 5.5C10 4.94772 9.55228 4.5 9 4.5L6 4.5V1.5C6 0.947715 5.55228 0.5 5 0.5Z" fill="white"/>
+</svg> круиз</div> </div>
+                            <div class="add__item"> <div class="add__btn"><svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.5C4.44772 0.5 4 0.947715 4 1.5V4.5L1 4.5C0.447715 4.5 0 4.94771 0 5.5C0 6.05228 0.447715 6.5 1 6.5H4V9.5C4 10.0523 4.44772 10.5 5 10.5C5.55228 10.5 6 10.0523 6 9.5V6.5H9C9.55228 6.5 10 6.05228 10 5.5C10 4.94772 9.55228 4.5 9 4.5L6 4.5V1.5C6 0.947715 5.55228 0.5 5 0.5Z" fill="white"/>
+</svg> отель</div> </div>
+                            <div class="add__item"> <div class="add__btn"><svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.5C4.44772 0.5 4 0.947715 4 1.5V4.5L1 4.5C0.447715 4.5 0 4.94771 0 5.5C0 6.05228 0.447715 6.5 1 6.5H4V9.5C4 10.0523 4.44772 10.5 5 10.5C5.55228 10.5 6 10.0523 6 9.5V6.5H9C9.55228 6.5 10 6.05228 10 5.5C10 4.94772 9.55228 4.5 9 4.5L6 4.5V1.5C6 0.947715 5.55228 0.5 5 0.5Z" fill="white"/>
+</svg> перелёт</div> </div>
+                            <div class="add__item"> <div class="add__btn"><svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.5C4.44772 0.5 4 0.947715 4 1.5V4.5L1 4.5C0.447715 4.5 0 4.94771 0 5.5C0 6.05228 0.447715 6.5 1 6.5H4V9.5C4 10.0523 4.44772 10.5 5 10.5C5.55228 10.5 6 10.0523 6 9.5V6.5H9C9.55228 6.5 10 6.05228 10 5.5C10 4.94772 9.55228 4.5 9 4.5L6 4.5V1.5C6 0.947715 5.55228 0.5 5 0.5Z" fill="white"/>
+</svg> трансфер</div> </div>
+                            <div class="add__item"> <div class="add__btn"><svg width="10" height="11" viewBox="0 0 10 11" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path fill-rule="evenodd" clip-rule="evenodd" d="M5 0.5C4.44772 0.5 4 0.947715 4 1.5V4.5L1 4.5C0.447715 4.5 0 4.94771 0 5.5C0 6.05228 0.447715 6.5 1 6.5H4V9.5C4 10.0523 4.44772 10.5 5 10.5C5.55228 10.5 6 10.0523 6 9.5V6.5H9C9.55228 6.5 10 6.05228 10 5.5C10 4.94772 9.55228 4.5 9 4.5L6 4.5V1.5C6 0.947715 5.55228 0.5 5 0.5Z" fill="white"/>
+</svg> экскурсии</div> </div>
                         </div>
                     </div>
         
