--- a/index.html
+++ b/index.html
@@ -310,12 +310,12 @@
                                     <div class="payment-discount">
                                         <div class="payment-discount__block"><span>Уровень лояльности: скидка:</span> <span>2%</span>
                                         </div>
-                                        <div>Применить скидку к данному заказу</div>
+                                        <div class="payment-discount__btn">Применить скидку к данному заказу</div>
                                     </div>
                 
                                     <div class="payment-bonus">
                                         <div class="payment-bonus__block"><span>Ваши бонусы:</span> <span>8500</span></div>
-                                        <div>Оплатить бонусными рублями этот заказ</div>
+                                        <div class="payment-discount__btn">Оплатить бонусными рублями этот заказ</div>
                                     </div>
                                 </div>
                             </div>
